# flow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  default.nix  flake.nix
src/: CMakeLists.txt  cfl_helpers.cu  cfl_helpers.cuh  config.hpp  main.cpp  parameters.cpp  parameters.cu  parameters.hpp  simulation.cu  simulation.hpp  simulation_impl.cu  simulation_impl.cuh  sor_solver.cu  sor_solver.cuh  vtk_writer.cpp  vtk_writer.hpp
src/fields/: field.hpp  flow_field.cpp  flow_field.hpp  scalar_field.hpp  vector_field.hpp
src/stencils/: fgh_stencil.cuh  iterator.cu  iterator.cuh  moving_wall_stencil.cuh  obstacle_stencil.cuh  rhs_stencil.cuh  stencil.hpp  velocity_stencil.cuh
